.metadata/.plugins/org.eclipse.cdt.ui/dieukhientocdoxe.build.log
19:02:10 **** Incremental Build of configuration Debug for project dieukhientocdoxe ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:231:17: warning: implicit declaration of function 'DieuKhienXeLucVe'; did you mean 'DieuHuongLucVe'? [-Wimplicit-function-declaration]
  231 |                 DieuKhienXeLucVe();
      |                 ^~~~~~~~~~~~~~~~
      |                 DieuHuongLucVe
../Core/Src/main.c:237:17: warning: implicit declaration of function 'DieuKhienXeLucDi'; did you mean 'DieuHuongLucDi'? [-Wimplicit-function-declaration]
  237 |                 DieuKhienXeLucDi();
      |                 ^~~~~~~~~~~~~~~~
      |                 DieuHuongLucDi
../Core/Src/main.c: In function 'tach_chuoi':
../Core/Src/main.c:674:30: error: subscripted value is neither array nor pointer nor vector
  674 |                 else strcpy(5[(i - 1) / 2], token);
      |                              ^
../Core/Src/main.c: In function 'measure_v':
../Core/Src/main.c:814:27: warning: implicit declaration of function 'sprintf' [-Wimplicit-function-declaration]
  814 |                           sprintf(data_transmit,"%s/%d/%d/%d/",local[0], vantoc, vatcan, time_run);
      |                           ^~~~~~~
../Core/Src/main.c:28:1: note: include '<stdio.h>' or provide a declaration of 'sprintf'
   27 | #include"ctype.h"
  +++ |+#include <stdio.h>
   28 | /* USER CODE END Includes */
../Core/Src/main.c:814:27: warning: incompatible implicit declaration of built-in function 'sprintf' [-Wbuiltin-declaration-mismatch]
  814 |                           sprintf(data_transmit,"%s/%d/%d/%d/",local[0], vantoc, vatcan, time_run);
      |                           ^~~~~~~
../Core/Src/main.c:814:27: note: include '<stdio.h>' or provide a declaration of 'sprintf'
../Core/Src/main.c: At top level:
../Core/Src/main.c:1111:6: warning: conflicting types for 'DieuKhienXeLucDi'; have 'void()'
 1111 | void DieuKhienXeLucDi(){
      |      ^~~~~~~~~~~~~~~~
../Core/Src/main.c:237:17: note: previous implicit declaration of 'DieuKhienXeLucDi' with type 'void()'
  237 |                 DieuKhienXeLucDi();
      |                 ^~~~~~~~~~~~~~~~
../Core/Src/main.c:1159:6: warning: conflicting types for 'DieuKhienXeLucVe'; have 'void()'
 1159 | void DieuKhienXeLucVe(){
      |      ^~~~~~~~~~~~~~~~
../Core/Src/main.c:231:17: note: previous implicit declaration of 'DieuKhienXeLucVe' with type 'void()'
  231 |                 DieuKhienXeLucVe();
      |                 ^~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

19:02:11 Build Failed. 2 errors, 6 warnings. (took 648ms)

